...
      },
      "total": {
        "type": "int"
      }
    }
  },
  "merchantOnboardingStepBusiness": "Business profile",
  "@merchantOnboardingStepBusiness": {
    "description": "Title of step one (business profile)."
  },
  "merchantOnboardingStepOwners": "Owners",
  "@merchantOnboardingStepOwners": {
    "description": "Title of step two (owners)."
...
